some dependecies added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  get:
+  hive: ^2.0.3
+  image_picker: ^0.7.4
+  path_provider: ^2.0.1
+  url_launcher: ^6.0.3
+  firebase_core: ^1.1.0
+  flutter_styled_toast: ^2.0.0
+  google_fonts:
+  connectivity: ^3.0.3
+
 
 dev_dependencies:
   flutter_test:
