--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   firebase_core: ^1.1.0
   flutter_styled_toast: ^2.0.0
   google_fonts:
+  flutter_spinkit: ^5.0.0
+  fancy_bottom_navigation: ^0.3.3
   connectivity: ^3.0.3
 
 
