--- a/servicejs/package.json
+++ b/servicejs/package.json
@@ -17,7 +17,12 @@
     "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "http-errors": "^1.8.0",
-    "mongoose": "^5.13.2",
-    "nodemon": "^2.0.9"
+    "mongoose": "^5.13.2"
+  },
+  "engines": {
+    "node": "14.17.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
   }
 }
