--- a/servicejs/.env
+++ b/servicejs/.env
@@ -1,1 +1,1 @@
-MONGO_URL =mongodb+srv://admin:<password>@cluster0.hg85r.mongodb.net/myFirstDatabase?retryWrites=true&w=majority;
+MONGO_URL =mongodb+srv://admin:112224448Aa--@cluster0.hg85r.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
