--- a/servicejs/package.json
+++ b/servicejs/package.json
@@ -14,9 +14,12 @@
   "author": "Ümit MUTLU",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "helmet": "^4.6.0",
     "http-errors": "^1.8.0",
-    "mongoose": "^5.13.2"
+    "mongoose": "^5.13.2",
+    "morgan": "^1.10.0"
   },
   "engines": {
     "node": "14.17.0"
