--- a/servicejs/package.json
+++ b/servicejs/package.json
@@ -14,6 +14,7 @@
   "author": "Ümit MUTLU",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
