--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   connectivity: ^3.0.3
   google_fonts: ^2.1.0
   http: ^0.13.3
+  dio: ^4.0.0
 
 dev_dependencies:
   flutter_test:
