--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   hive: ^2.0.3
   image_picker: ^0.7.4
   path_provider: ^2.0.1
+  path:
   url_launcher: ^6.0.3
   firebase_core: ^1.1.0
   flutter_styled_toast: ^2.0.0
